--- a/public/css/show.css
+++ b/public/css/show.css
@@ -2,6 +2,10 @@
 margin: 1px;
 }
 
+.show-page {
+    background-color: #D0E8F2;
+}
+
 .icons{
     display:flex; 
     justify-content: right;
@@ -20,10 +24,18 @@ margin: 1px;
 
 .animal-content {
     margin: 20px;
+    width: 30%;
     text-align: left;
-    padding-left: 5%;
     padding-top: 5%;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #bbb,
+                -1px -1px 10px #bbb,
+                1px -1px 10px #bbb,
+                -1px 1px 10px #bbb;
+        
 }
+
 
 .animal-content ul{
        list-style-type: none;
@@ -35,3 +47,6 @@ margin: 1px;
     text-align: center;
 }
 
+.list-items{
+    padding-left: 20%;
+}
